                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 01-08-2006 added: [ 1527477 ] Add restart video menu when auto resume video option is on. thanks to kusskowe.
 - 01-08-2006 changed: don't start kai on login screen.
 - 31-07-2006 added: [ 1440803 ] Associate Profiles with AV pack. thanks to markeen. will be documented on http://xbmc.xbox-scene.com/wiki/ soonish.
 - 31-07-2006 fixed: some minor trainer related issues.
 - 31-07-2006 fixed: master user login timestamp wasn't saved.
 - 31-07-2006 changed: autoexec.py is hidden in the script window (clutter). use the filemanager for testing.
 - 31-07-2006 fixed: [ 1530774 ] Trainers "update list" bug
 - 31-07-2006 fixed: overlay rendering had tearing, renderer updated overlay surface before previous overlay had been copied (second attempt, restored double buffering)
 - 31-07-2006 changed: player controls are now disabled on the login screen.
 - 31-07-2006 fixed: conflict with using the different types of locks (all locks had to be of the same kind as the master lock).
 - 31-07-2006 fixed: Stuck in settings after loading PM3 (or other skins) from Mc360.
 - 31-07-2006 fixed: Removed old non-float code from paplayer path, and fixed buffer sizes.
 - 30-07-2006 fixed: on some dvd's, menu overlays appeared to soon
 - 28-07-2006 added: new speed units
 - 28-07-2006 updated: Icelandic language file (Thnx to kristjan)
 - 28-07-2006 updated: Swedish language file (Thnx to blittan)
 - 28-07-2006 updated: Norwegian language file (Thnx to vnm)
 - 28-07-2006 updated: Finnish language file (Thnx to jutski)
 - 28-07-2006 updated: Dutch language file (Thnx to console-ombouw)
 - 28-07-2006 fixed: [ 1522095 ] Weather location does not update.